--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -5,9 +5,9 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@android:color/holo_blue_light">
-    <TextView
-        android:id="@+id/tvLabel"
+    <FrameLayout
+        android:id="@+id/camera_preview"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="fill_parent"/>
 
 </RelativeLayout>
